--- a/app/views/page/_content.html.erb
+++ b/app/views/page/_content.html.erb
@@ -4,7 +4,7 @@
 </div>
 <% end %>
 
-<%= form_tag_if(logged_in? && @page.pset, page_submit_url, { :multipart => true, :id => "page_form" }) do %>
+<%= form_tag_if(logged_in? && @page.pset, page_submit_path, { :multipart => true, :id => "page_form" }) do %>
 <%= hidden_field_tag :page_id, @page.id %>
 
 	<% @page.subpages.each_with_index do |subpage, index| %>
