--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -9,3 +9,5 @@
 <p><%= link_to '<i class="glyphicon glyphicon-user"></i> Import Users'.html_safe, admin_import_path, class:'btn btn-default btn-lg' %></p>
 
 <p><%= link_to '<i class="glyphicon glyphicon-check"></i> Show Pages to Public'.html_safe, admin_pages_path, class:'btn btn-default btn-lg' %></p>
+
+<p><%= link_to '<i class="glyphicon glyphicon-time"></i> Current schedule'.html_safe, admin_schedule_path, class:'btn btn-default btn-lg' %></p>
