--- a/app/views/course/grades.html.erb
+++ b/app/views/course/grades.html.erb
@@ -1,7 +1,7 @@
 <h1>Students</h1>
 <%= render partial: 'tabs' %>
 
-<%= render partial: 'table', locals: { users: @users, psets: @psets, schedules: Schedule.all } %>
+<%= render partial: 'table', locals: { users: @users, psets: @psets } %>
 
 
 <script type="text/javascript" charset="utf-8">
