--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -10,9 +10,9 @@
 			</button>
 		</div>
 		<ul class="nav navbar-nav">
-			<% if logged_in? && current_user.schedule && current_user.schedule.schedule_spans %>
+			<% if logged_in? && @schedule %>
 			<li class="dropdown dropdown-accordion">
-				<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-time"></span></a>
+				<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-time"></span> <%= @schedule.name %></a>
 				<ul class="dropdown-menu">
 					<%= render 'layouts/schedule' %>
 				</ul>
