--- a/app/views/layouts/_schedule.html.erb
+++ b/app/views/layouts/_schedule.html.erb
@@ -1,25 +1,10 @@
-<div class="panel-group" id="accordion3" role="tablist" aria-multiselectable="true" style="margin:0">
-	<% for schedule in current_user.schedule.schedule_spans.each %>
-	<div class="panel panel-default" style="border:0; border-radius:0">
-		<div class="panel-heading" role="tab" id="heading<%= schedule.name.gsub(/\s+/, "") %>"  style="border-radius:0">
-			<h4 class="panel-title">
-				<a role="button" data-toggle="collapse" data-parent="#accordion3" href="#collapse<%= schedule.name.gsub(/\s+/, "") %>" aria-expanded="true" aria-controls="collapse<%= schedule.name.gsub(/\s+/, "") %>">
-					<%= schedule.name %>
-				</a>
-			</h4>
-		</div>
-		<div id="collapse<%= schedule.name.gsub(/\s+/, "") %>" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading<%= schedule.name.gsub(/\s+/, "") %>">
-			<div class="list-group">
-				<% schedule.content.each do |item, link|  %>
-				<% next if item == 'description' %>
-                <% if link.nil? %>
-                    <div class="list-group-item"><%= item.sub('[', '<span class="badge">').sub(']', '</span>').html_safe %></div>
-                <% else %>
-    				<%= link_to item.sub('[', '<span class="badge">').sub(']', '</span>').html_safe, link, class:'list-group-item' %>
-                <% end %>
-				<% end %>
-			</div>
-		</div>
-	</div>
-	<% end %>
-</div>
+<% schedule = @schedule %>
+
+<% schedule.content.each do |item, link|  %>
+<% next if item == 'description' %>
+<% if link.nil? %>
+    <li><%= item.sub('[', '<span class="badge pull-right">').sub(']', '</span>').html_safe %></li>
+<% else %>
+	<li><%= link_to item.sub('[', '<span class="badge pull-right">').sub(']', '</span>').html_safe, link %></li>
+<% end %>
+<% end %>
