--- a/app/views/admin/dump_grades.html.erb
+++ b/app/views/admin/dump_grades.html.erb
@@ -27,7 +27,7 @@
 		<% if s.submits.any? %>
 		<table class="table table-condensed grades">
 			<tr>
-				<th><%= s.name %> (<%= s.uvanetid %>)</th>
+				<th><%= s.name %> (<%= s.login_id %>)</th>
 				<th>pset</th>
 				<th>grade</th>
 				<th>subgrades</th>
