--- a/app/views/admin/export_grades.html.erb
+++ b/app/views/admin/export_grades.html.erb
@@ -19,7 +19,7 @@
 			<%= user.name %>
 		</td>
 		<td>
-			<%= user.uvanetid %>
+			<%= user.login_id %>
 		</td>
 		<% @psets.each do |pset| %>
 		<td>
