--- a/app/views/check/index.html.erb
+++ b/app/views/check/index.html.erb
@@ -10,11 +10,11 @@
 			<th>done</th>
 		</tr>
 		<% @users.each do |user| %>
-		<tr id="td<%= user.uvanetid %>">
+		<tr id="td<%= user.login_id %>">
 			<td><%= user.name %></td>
 			<td>
-				<%= link_to 'pass', grade_save_path(grade:{ grade:-1 }, pset_id:@pset.id, user_id:user.id), method: :post, remote: true, onclick:"$('#td#{user.uvanetid}').fadeOut()" %> ---
-				<%= link_to 'fail', grade_save_path(grade:{ grade:0 }, pset_id:@pset.id, user_id:user.id), method: :post, remote: true, onclick:"$('#td#{user.uvanetid}').fadeOut()" %>
+				<%= link_to 'pass', grade_save_path(grade:{ grade:-1 }, pset_id:@pset.id, user_id:user.id), method: :post, remote: true, onclick:"$('#td#{user.login_id}').fadeOut()" %> ---
+				<%= link_to 'fail', grade_save_path(grade:{ grade:0 }, pset_id:@pset.id, user_id:user.id), method: :post, remote: true, onclick:"$('#td#{user.login_id}').fadeOut()" %>
 			</td>
 		</tr>
 		<% end %>
