--- a/app/views/grades/form.html.erb
+++ b/app/views/grades/form.html.erb
@@ -1,4 +1,4 @@
-<h1><%= @pset.name %> <small> by <%= @user.name %> / <%= @user.login_id %></small></small></h1>
+<h1><%= @pset.name %> <small> by <%= @user.name %> / <%= @submit.used_login if @submit %></small></small></h1>
 <% if current_user.is_admin? and @submit %>
 <%= link_to 'Put into grading list', course_touch_submit_path(submit_id: @submit.id), method: :post %> /
 <% end %>
