--- a/app/views/grading/index.html.erb
+++ b/app/views/grading/index.html.erb
@@ -45,7 +45,7 @@
 			<tr>
 				<td><%= submit.pset.name %></td>
 				<td><%= link_to submit.user.name, grade_form_path(user_id: submit.user_id, pset_id: submit.pset_id) %></td>
-				<td><%= submit.user.login_id %></td>
+				<td><%= submit.used_login %></td>
 				<td><% if submit.submitted_at %><%= submit.submitted_at.to_formatted_s(:short) %> (<%= time_ago_in_words(submit.submitted_at) %> ago)<% end %></td>
 				<td <%= "class=info" if submit.grade %>><%= submit.grade.grade if submit.grade %></td>
 			</tr>
