chart range maximum

--- a/app/views/course/_table.html.erb
+++ b/app/views/course/_table.html.erb
@@ -60,5 +60,5 @@
 
 
 <script type="text/javascript">
-    $(".bar").sparkline('html', { type: 'bar', barWidth: 8 });
+    $(".bar").sparkline('html', { type: 'bar', chartRangeMax: 4, barWidth: 8 });
 </script>
