--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -63,10 +63,10 @@
 	</div>
 </nav>
 
-<% if flash[:error] %>
+<% if flash[:alert] %>
 <div class="alert alert-danger alert-dismissible">
 	<button type="button" class="close" data-dismiss="alert">&times;</button>
-	<%= flash[:error] %>
+	<%= flash[:alert] %>
 </div>
 <% end %>
 
