bit more responsive

--- a/app/views/layouts/page.html.erb
+++ b/app/views/layouts/page.html.erb
@@ -18,6 +18,8 @@
 	<%= stylesheet_link_tag    "application", :media => "all" %>
 	<%= javascript_include_tag "application" %>
 	<%= mathjax_tag %>
+
+    <link rel="icon" type="image/png" href="/images/minor.png" />
 </head>
 
 <body>
