--- a/app/views/layouts/full-width.html.erb
+++ b/app/views/layouts/full-width.html.erb
@@ -11,6 +11,8 @@
 
 	<%= stylesheet_link_tag    "application", :media => "all" %>
 	<%= javascript_include_tag "application" %>
+
+    <link rel="icon" type="image/png" href="/images/minor.png" />
 </head>
 
 <body>
