--- a/app/views/layouts/full-width.html.erb
+++ b/app/views/layouts/full-width.html.erb
@@ -12,6 +12,8 @@
 	<%= stylesheet_link_tag    "application", :media => "all" %>
 	<%= javascript_include_tag "application" %>
 
+	<%= javascript_include_tag @monitoring_url %>
+
     <link rel="icon" type="image/png" href="/images/minor.png" />
 </head>
 
