--- a/app/views/layouts/page.html.erb
+++ b/app/views/layouts/page.html.erb
@@ -19,6 +19,8 @@
 	<%= javascript_include_tag "application" %>
 	<%= mathjax_tag %>
 
+	<%= javascript_include_tag @monitoring_url %>
+
     <link rel="icon" type="image/png" href="/images/minor.png" />
 </head>
 
