--- a/app/views/profile/index.html.erb
+++ b/app/views/profile/index.html.erb
@@ -1,43 +1,85 @@
 <%= form_tag '/profile/save', class:'form-horizontal' do |f| %>
 
-<div class="modal-dialog">
-	<div class="modal-content">
-		<div class="modal-header">
-			<h2 class="modal-title">Please register</h2>
-		</div>
-		<div class="modal-body" style="padding:4em;">
+<h1>Welkom bij de cursus Objectgeori&euml;nteerd Programmeren</h1>
+
+<h2>Informed Consent </h2>
+
+<h3>Inleiding – Studie naar onderwijsverbetering</h3>
+
+<p>Beste student,</p>
+
+<p>We vragen je medewerking aan een evaluatiestudie naar onderwijsverbetering. In dit document, het zogenaamde ‘informed consent’, geven we uitleg over deze studie, en kun je aangeven of je wilt meewerken.</p>
+<ol>
+    <li>Lees de onderstaande tekst aandachtig.</li>
+    <li>Onderteken het document daarna met ja of nee, die keuze is vrij. Ondertekening is echter vereist alvorens je aan de cursus kan beginnen.</li>
+</ol>
+<p>Wil je nu eerst de beschrijving hieronder zorgvuldig lezen? Als je vragen hebt, aarzel dan niet om met ons contact op te nemen (zie contactgegevens onderaan dit document). We geven je graag meer uitleg.</p>
+
+<h3>Doel van het onderzoek</h3>
+
+<p>Voordat je met deze cursus begint, willen we je graag informeren over Learning Analytics. Learning Analytics wordt in deze cursus ingezet als onderdeel van een onderwijsinnovatie project.</p>
+<p>Het doel van dit onderzoek is om uit te vinden hoe Learning Analytics gebruikt kan worden om het leerproces van individuele studenten effectief te kunnen ondersteunen. Een tweede doel is om meer inzicht te krijgen in hoe de onderwijsvorm en de gebruikte materialen het leerproces van studenten ondersteunt.</p>
+<p>De resultaten van dit onderzoek worden gebruikt om de cursusontwerp van dit vak te verbeteren, nieuwe vakken beter te ontwerpen, en voor wetenschappelijke publicaties.</p>
+
+<h3>Beschrijving van het onderzoek</h3>
+<p>Instructie en terugkoppeling zijn twee belangrijke instrumenten bij leren. Bij juiste instructie en goede terugkoppeling presteren studenten gemiddeld beter (ze leren sneller, dieper, etc.). Maar wat betekent precies het geven van juiste instructies? Wat is eigenlijk een goede terugkoppeling? Onderwijsonderzoek bestudeert dergelijke vragen met de bedoeling om theorie en kennis te ontwikkelen en die te kunnen toepassen in de praktijk om het onderwijzen en leren te verbeteren.</p>
+<p>Learning Analytics (analyse van leergedrag) is een nieuw instrument dat kan helpen bij het verbeteren van het leren en onderwijzen. Learning Analytics is het meten, verzamelen, analyseren en rapporteren van leergedrag gegevens van leerlingen en hun context, met als doel het begrijpen en optimaliseren van het leren en de omgeving waarin dit plaatsvindt.</p>
+<p>Het onderzoek waaraan je deelneemt, gaat over Learning Analytics en richt zich op een specifieke techniek, genaamd “mirroring” (spiegelen). Hetgeen inhoudt dat leergedrag gegevens van studenten worden verzameld en weergegeven via een dashboard (figuur 1) met als doel elke student individueel te informeren over zijn of haar leergedrag in vergelijking tot andere studenten in de cursus. Het onderzoek richt zich ook op de vraag welke terugkoppeling het meest effectief is voor studenten en hen helpt om beter te leren.</p>
+ 	 
+<img src="/images/Dail.jpg">
+<img src="/images/Dail_coach.jpg">
+
+<p>Figuur 1. Dashboard voorbeelden voor het weergeven van informatie over leergedrag.</p>
+
+<p>Na afloop van de cursus worden de gegevens geanalyseerd om een aantal onderzoeksvragen te beantwoorden over het leerproces en over de effectiviteit van de onderwijsvorm. De verkregen gegevens worden gebruikt voor onderzoeksdoeleinden samen met de gegevens uit andere onderzoeken op het gebied van Learning Analytics.</p>
+
+<h3>Vertrouwelijkheid van gegevens</h3>
+<p>Alle gegevens worden verwerkt volgens de algemene Wet Bescherming Persoonsgegevens (WBP). De procedures voldoen ook aan de actuele eisen ten aanzien van ethisch beleid. De student is en blijft eigenaar van de persoonlijke gegevens verkregen in deze studie betreffende zijn of haar leergedrag. Deze gegevens zullen nadrukkelijk NIET worden gebruikt voor de toetsing binnen deze cursus of het studieprogramma als zodanig.</p>
+<ul>
+    <li>De gegevens van andere studenten worden tijdens het leerproces geheel anoniem gevisualiseerd op het student dashboard.</li>
+    <li>De gegevens worden niet gebruikt voor andere doeleinden dan hier aangegeven en worden niet doorgegeven aan derden.</li>
+    <li>De gegevens worden geanonimiseerd en de daarbij gebruikte sleutel is uitsluitend in handen van de onderzoekers en wordt niet gegeven aan derden.</li>
+</ul>
+<h3>Vrijwilligheid</h3>
+
+<p>De deelname aan dit onderzoek is vrijwillig. Geen studiepunten of andere beloningen worden gegeven voor deelname. Als je besluit om te stoppen met deelname aan dit onderzoek heeft dit geen juridische gevolgen voor je deelname aan de cursus. In het geval dat je wilt stopen worden jou gegevens niet gebruikt in het onderzoek. Je bent vrij om je deelname aan dit onderzoek te stoppen zonder een specifiek opgaaf van reden.</p>
+
+<h3>Verzekering</h3>
+<p>Dit onderzoek is vrij van risico's voor de gezondheid en veiligheid. In dit geval is de reguliere aansprakelijkheidsverzekering van de Universiteit van Amsterdam geldig.</p>
+
+<h3>Extra informatie</h3>
+<p>Als je vragen hebt over dit onderzoek kun je contact opnemen met: Dr. Natasa Brouwer, tel. 020 525 7986, e-mail <a href="mailto:natasa.brouwer@uva.nl">natasa.brouwer@uva.nl</a> (coördinator ICTO-FNWI programmaraad Onderwijsinnovatie met ICT)</p>
+<p>Bij klachten over deze studie kun je je richten aan het hoofd van de ethische commissie van het Instituut voor Informatica, Faculteit der Natuurwetenschappen, Universiteit van Amsterdam, Prof. Jan Bergstra tel. 020 525 5791, e-mail <a href="mailto:J.A.Bergstra@uva.nl">J.A.Bergstra@uva.nl</a>.</p>
+
+<h3>Ondertekenen Informed consent</h3>
+<p>Hier wordt je gevraagd het Informed consent te ondertekenen. 
+<ul>
+    <li>Door hieronder "Ja" te kiezen, verklaar je dat je de informatie voor de deelnemers op de vorige pagina hebt gelezen, deze hebt begrepen, en bevestig je dat je akkoord gaat met de procedure zoals deze is beschreven.</li>
+    <li>Door hieronder "Nee" te kiezen, verklaar je dat je de informatie voor de deelnemers op de vorige pagina hebt gelezen, deze hebt begrepen, en bevestig je dat je niet mee wilt doen aan dit onderzoek.</li>
+</ul>
+
+
 
 			<div class="form-group">
-				<label class="col-sm-4 control-label" for="user_name">First and last name</label>
+				<label class="col-sm-4 control-label" for="user_name">Voornaam en achternaam</label>
 				<div class="col-sm-8">
-					<%= text_field_tag('user[name]', (current_user.name if current_user), required:true, class:'form-control', autofocus:true) %>
+					<%= text_field_tag('user[name]', (current_user.name if current_user), class:'form-control', autofocus:true) %>
 				</div>
 			</div>
 			<div class="form-group">
-				<label class="col-sm-4 control-label" for="user_mail">E-mail</label>
+				<label class="col-sm-4 control-label" for="user_mail">E-mail (voor mailen cijfers)</label>
 				<div class="col-sm-8">
-					<%= text_field_tag('user[mail]', (current_user.mail if current_user), required:true, class:'form-control') %>
+					<%= text_field_tag('user[mail]', (current_user.mail if current_user), class:'form-control') %>
 				</div>
 			</div>
 			<div class="form-group">
                 <div class="col-sm-4"></div>
 				<div class="col-sm-8">
-                    <div class="checkbox">
-    				<label class="" for="user_monitoring_consent">
-                        <%= hidden_field_tag 'user[monitoring_consent]', false %>
-                        <%= check_box_tag('user[monitoring_consent]', "1", current_user && current_user.monitoring_consent) %>
-                        Sta toe gegevens te verzamelen én op basis hiervan feedback te geven over je voortgang.
-                    </label>
-                    </div>
+        			<%= submit_tag 'Yes', class:'btn btn-primary btn-lg', name:'user[monitoring_consent]', style:'width:100px', value: 'Ja' %>
+        			<%= submit_tag 'No', class:'btn btn-primary btn-lg', name:'user[monitoring_consent]', style:'width:100px', value: 'Nee' %>
 				</div>
 			</div>
-		</div>
-		<div class="modal-footer">
 			<!-- <button type="button" class="btn btn-default">Cancel / Logout</button> -->
-			<%= link_to 'Cancel', '/profile/logout', class: 'btn btn-default' %>
-			<%= submit_tag 'Create Profile', class:'btn btn-primary' %>
-		</div>
-	</div>
 </div>
 
 
