--- a/app/views/profile/index.html.erb
+++ b/app/views/profile/index.html.erb
@@ -26,10 +26,7 @@
 <p>Learning Analytics (analyse van leergedrag) is een nieuw instrument dat kan helpen bij het verbeteren van het leren en onderwijzen. Learning Analytics is het meten, verzamelen, analyseren en rapporteren van leergedrag gegevens van leerlingen en hun context, met als doel het begrijpen en optimaliseren van het leren en de omgeving waarin dit plaatsvindt.</p>
 <p>Het onderzoek waaraan je deelneemt, gaat over Learning Analytics en richt zich op een specifieke techniek, genaamd “mirroring” (spiegelen). Hetgeen inhoudt dat leergedrag gegevens van studenten worden verzameld en weergegeven via een dashboard (figuur 1) met als doel elke student individueel te informeren over zijn of haar leergedrag in vergelijking tot andere studenten in de cursus. Het onderzoek richt zich ook op de vraag welke terugkoppeling het meest effectief is voor studenten en hen helpt om beter te leren.</p>
  	 
-<img src="/images/Dail.jpg">
-<img src="/images/Dail_coach.jpg">
-
-<p>Figuur 1. Dashboard voorbeelden voor het weergeven van informatie over leergedrag.</p>
+<img src="/images/plaatje_dashbord3.jpg">
 
 <p>Na afloop van de cursus worden de gegevens geanalyseerd om een aantal onderzoeksvragen te beantwoorden over het leerproces en over de effectiviteit van de onderwijsvorm. De verkregen gegevens worden gebruikt voor onderzoeksdoeleinden samen met de gegevens uit andere onderzoeken op het gebied van Learning Analytics.</p>
 
