--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -8,7 +8,8 @@
 	<% end %>
     <% if Settings['links'] %>
     <% Settings['links'].each do |title, url| %>
-    <li><%= link_to title, url %></li>
+    <li><%= link_to title.html_safe, url %></li>
+	<li class="divider"></li>
     <% end %>
     <% end %>
 	<% if current_user.is_admin? %>
