--- a/app/views/config/git.html.erb
+++ b/app/views/config/git.html.erb
@@ -2,15 +2,17 @@
 
 <p>
 	<%= form_tag(config_git_repo_path, class:'form') do %>
-    <div class="form-group">
-	
-	<%= text_field_tag 'repo_url', Settings['git_repo'], required: true, class: 'form-control' %>
-	</div>
-	<%= submit_tag 'Clone', class:'btn btn-primary' %>
+        <div class="form-group">
+            <label for="repo_url">Repository clone URL</label>
+            <%= text_field_tag 'repo_url', Settings['git_repo'], required: true, class: 'form-control' %>
+    	</div>
+        <div class="form-group">
+            <label for="repo_branch">Branch</label>
+            <%= text_field_tag 'repo_branch', Settings['git_branch'], class: 'form-control' %>
+    	</div>
+        <p>
+        	Warning: you can actually only clone a repository once. Changing this value after cloning has no effect.
+        </p>
+    	<%= submit_tag 'Clone', class:'btn btn-primary' %>
 	<% end %>
 </p>
-	
-<p>
-	Warning: you can only clone a repository once. Changing this value after cloning has no effect.
-</p>
-
