--- a/app/views/layouts/_ama.html.erb
+++ b/app/views/layouts/_ama.html.erb
@@ -1,8 +1,9 @@
 <li role="presentation" class="dropdown-header" style="padding:2px 10px 0 10px;">Ask us anything.</li>
 <li class="dropdown-header"  style="padding:2px 10px 0 10px;">
 	<%= form_tag({controller: 'profile', action: 'ask'}, method: :post) do %>
-		<textarea name="question" class="form-control" rows="3" style="border:1px solid #ddd" required></textarea>
+		<textarea name="question" class="form-control" rows="3" required placeholder="Question"></textarea>
         <% if Settings.allow_hands %>
+        <input type="text" name="location" class="form-control" required placeholder="Your location">
 		<button type="submit" style="margin-top:0.5em; margin-bottom:0.5em" class="btn btn-default btn-sm btn-block btn-warning" name="how" value="hands">Ask for assistance</button>
         <% else %>
 		<button type="submit" style="margin-top:0.5em; margin-bottom:0.5em" class="btn btn-default btn-sm btn-block btn-warning" name="how" value="email">Send question by e-mail</button>
