--- a/app/assets/stylesheets/tweaks.scss
+++ b/app/assets/stylesheets/tweaks.scss
@@ -40,3 +40,18 @@ a.list-group-item
 	overflow-y:scroll;
 }
 
+.videoblock
+{
+    @extend .embed;
+    
+    .content
+    {
+        @extend .embed-responsive;
+        @extend .embed-responsive-16by9;
+        
+        iframe
+        {
+            @extend .embed-responsive-item;
+        }
+    }
+}
