--- a/app/assets/stylesheets/strap.scss
+++ b/app/assets/stylesheets/strap.scss
@@ -168,15 +168,15 @@ section .embed
 	margin:2em -2em;
 }
 
-section blockquote:first-child, section .embed:first-child
-{
-	margin-top:-2em;
-}
-
-section blockquote:last-child, section .embed:last-child
-{
-	margin-bottom:-2em;
-}
+//section blockquote:first-child, section .embed:first-child
+//{
+//    margin-top:-2em;
+//}
+//
+//section blockquote:last-child, section .embed:last-child
+//{
+//    margin-bottom:-2em;
+//}
 
 section blockquote p
 {
