--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,9 +13,9 @@
 
 $link-color: #CCA300;
 
-$navbar-default-bg: #aa9971;
-$navbar-default-color: #f7faff;
-$navbar-default-link-color: #f7faff;
+$navbar-default-bg: #469D4F;
+$navbar-default-color: #469D4F;
+$navbar-default-link-color: #3a2e28;
 
 $component-active-bg: #7F6600;
 
