--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,8 +14,10 @@
 $link-color: #CCA300;
 
 $navbar-default-bg: #469D4F;
-$navbar-default-color: #469D4F;
+$navbar-default-color: #F0F7FB;
 $navbar-default-link-color: #3a2e28;
+$navbar-default-link-active-color: #F0F7FB;
+$navbar-default-border: transparent;
 
 $component-active-bg: #7F6600;
 
