--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -31,7 +31,7 @@
                 </li>
                 <% end %>
 
-                <% if logged_in? and (@alerts.count > 0 or @current_user.is_admin?) %>
+                <% if !Settings.mail_address.blank? and logged_in? and (@alerts.count > 0 or @current_user.is_admin?) %>
                 <li class="dropdown dropdown-accordion">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-bell"></span><span class=""><%= @alerts.count %></span></a>
                     <ul class="dropdown-menu">
