don't show button

--- a/app/views/grades/form.html.erb
+++ b/app/views/grades/form.html.erb
@@ -140,5 +140,5 @@ grader: <%= @grade.grader_name %>
 <% if current_user.is_admin? and @submit %>
 <hr>
 <%= link_to "Destroy submit completely", { action: :destroy, submit_id: @submit.id, referer: request.referer }, method: :delete, data: { confirm: "Sure? This removes proof of student submitting. If you want to delete the grade, just empty text field and save the grade." }, class: 'btn btn-danger' if @submit %>
-<%= link_to 'Put into grading list', course_touch_submit_path(submit_id: @submit.id), method: :post, data: { confirm: "Sure?" }, class: 'btn btn-danger' %>
+<%= link_to_if @submit.grade, 'Put into grading list', course_touch_submit_path(submit_id: @submit.id), method: :post, data: { confirm: "Sure?" }, class: 'btn btn-danger' %>
 <% end %>
