--- a/app/views/course/_table.html.erb
+++ b/app/views/course/_table.html.erb
@@ -25,7 +25,7 @@
 			</form>
 		</th>
 		<% end %>
-		<% if Settings['grading']['calculation'] %>
+		<% if GradeTools.available? %>
 		<th class="rotate">Active?</th>
 		<% end %>
 	</tr>
@@ -58,7 +58,7 @@
 		<td><%= best_in_place user, :status, as: :input, url: user_path(id: user.id) %></td>
 		<% end %>
 		<td><%= best_in_place user, :active, as: :checkbox, url: user_path(id: user.id) %></td>
-		<% if Settings['grading']['calculation'] %>
+		<% if GradeTools.available? %>
 		<td><%= button_to 'calc', course_assign_final_grade_path(id:user.id), method: :put, remote: true, class: 'btn btn-xs' %></td>
 		<% end %>
 	</tr>
