--- a/app/views/course/_table.html.erb
+++ b/app/views/course/_table.html.erb
@@ -42,7 +42,7 @@
 			<% end %>
 		</td>
         
-        <td><span class="bar"><%= user.attendance %></span></td>
+        <td><span class="bar"><%= user.attendance.take(user.attendance.length-1) %></span> <%= user.attendance.last %></td>
 
 		<% subs = user.submits.group_by(&:pset_id) %>
 		<% psets.each do |pset| %>
