--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -41,7 +41,7 @@
                 <% end %>
             </ul>
 
-            <ul class="nav navbar-nav navbar-right"  style="position: absolute; bottom:0; right:0;">
+            <ul class="nav navbar-nav navbar-right">
                 <% if (Settings.mail_address || Settings.hands_allow) && current_user.valid_profile? %>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-question-sign"></span> Ask</a>
