--- a/app/assets/stylesheets/tweaks.scss
+++ b/app/assets/stylesheets/tweaks.scss
@@ -29,12 +29,12 @@ textarea#notes
     }
 }
 
-a.list-group-item
+/*a.list-group-item
 {
     color:black;
     text-decoration:underline;
 }
-
+*/
 .jqstooltip{
     box-sizing: content-box;
 }
