--- a/app/views/hands/index.html.erb
+++ b/app/views/hands/index.html.erb
@@ -1,57 +1,47 @@
-<h1>Hands</h1>
-
-<% if @my_hands.any? %>
-
-<div class="row">
-	<div class="col-sm-12">
-		<%= form_tag({controller: 'hands', action: 'done'}, method: :post) do %>
-		<table class="table">
-			<tr>
-				<th>name</th><th></th>
-				<th>location</th>
-				<th>last seen</th><th>asked</th>
-				<th></th>
-			</tr>
-			<% @my_hands.each do |hand| %>
-			<tr>
-				<td><%= hand.user.name %></td>
-				<td><%= hand.help_question %></td>
-				<td><%= hand.location %></td>
-				<td><%= time_ago_in_words(hand.user_last_seen) unless hand.user_last_seen.blank? %></td>
-				<td><%= time_ago_in_words(hand.created_at) %></td>
-				<td><button type="submit" class="btn btn-error" name="which" value="<%= hand.id %>">Done!</button></td>
-			</tr>
-			<% end %>
-		</table>
-		<% end %>
+<p>
+	<div class="input-group">
+		<input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
+		<div class="input-group-btn">
+			<button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+		</div>
 	</div>
-</div>
-
-<% end %>
-
-<h2>All hands</h2>
+</p>
 
 <div class="row">
 	<div class="col-sm-12">
-		<%= form_tag({controller: 'hands', action: 'dib'}, method: :post) do %>
-		<table class="table">
-			<tr>
-				<th>name</th><th></th>
-				<th>location</th>
-				<th>last seen</th><th>asked</th>
-				<th></th>
-			</tr>
-			<% @hands.each do |hand| %>
-			<tr>
-				<td><%= hand.user.name %></td>
-				<td><%= hand.help_question %></td>
-				<td><%= hand.location %></td>
-				<td><%= time_ago_in_words(hand.user_last_seen) unless hand.user_last_seen.blank? %></td>
-				<td><%= time_ago_in_words(hand.created_at) %></td>
-				<td><button type="submit" class="btn" name="which" value="<%= hand.id %>">Dibs!</button></td>
-			</tr>
+		<div class="list-group">
+
+
+			<% if @my_hands.any? %>
+			<% @my_hands.each do |hand| %>
+			<%= link_to({controller: 'hands', action: 'show', id: hand.id}, class: 'list-group-item list-group-item-info') do %>
+			<span class="badge"><%= hand.location %></span>
+			<strong><%= hand.user.name %></strong><br><small><%= time_ago_in_words(hand.created_at) %> ago</small>
 			<% end %>
-		</table>
-		<% end %>
+			<% end %>
+			<% end %>
+
+
+			<% @hands.each do |hand| %>
+			<%= link_to({controller: 'hands', action: 'show', id: hand.id}, class: 'list-group-item') do %>
+			<span class="badge"><%= hand.location %></span>
+			<strong><%= hand.user.name %></strong><br><small><%= time_ago_in_words(hand.created_at) %> ago</small>
+			<% end %>
+			<% end %>
+
+
+			<% if @long_time_users.any? %>
+
+			<% @long_time_users.each do |user| %>
+			<%= link_to({controller: 'hands', action: 'show', id: user.id}, class: 'list-group-item') do %>
+			<strong><%= user.name %></strong><br><small>
+				<% if user.last_spoken_at.blank? %>A new student: give them a warm welcome!<% else %><%= time_ago_in_words(user.last_spoken_at) unless user.last_spoken_at.blank? %> ago<% end %></small>
+			</a>
+			<% end %>
+			<% end %>
+
+			<% end %>
+
+		</div>
 	</div>
 </div>
