partial functionality 2 for hands

--- a/app/assets/stylesheets/tweaks.scss
+++ b/app/assets/stylesheets/tweaks.scss
@@ -1,3 +1,11 @@
+@media screen and (-webkit-min-device-pixel-ratio:0) { 
+  select,
+  textarea,
+  input {
+    font-size: 16px;
+  }
+}
+
 /* fix for the scrollbar on the submit tab */
 textarea#notes
 {
