--- a/app/views/layouts/page.html.erb
+++ b/app/views/layouts/page.html.erb
@@ -5,6 +5,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="apple-mobile-web-app-capable" content="yes">
 	<%= csrf_meta_tags %>
 
 	<title><%= title %></title>
